force-app/main/default/objects/Zoho_Ticket__c/Zoho_Ticket__c.object-meta.xml
<CustomObject>
    <description>Contains the zoho ticket data.</description>
    <label>Zoho Ticket OLD</label>
    <nameField>
        <label>Zoho Ticket Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoho Tickets OLD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>