force-app/main/default/objects/Zoho_Ticket__c/fields/Ageing__c.field-meta.xml
<CustomField>
    <fullName>Ageing__c</fullName>
    <formula>IF((TODAY() -   DATEVALUE(Created_Time_D_Format__c) ) &lt;= 7, 1,
IF(AND((TODAY() -  DATEVALUE(Created_Time_D_Format__c) )&gt;7,(TODAY() -  DATEVALUE(Created_Time_D_Format__c))&lt;=15), 2,  IF(AND((TODAY() -  DATEVALUE(Created_Time_D_Format__c) )&gt;15,(TODAY() -  DATEVALUE(Created_Time_D_Format__c) )&lt;=30), 3,  IF(AND((TODAY() -  DATEVALUE(Created_Time_D_Format__c) )&gt;30,(TODAY() -  DATEVALUE(Created_Time_D_Format__c) )&lt;=45), 4,  IF((TODAY() -  DATEVALUE(Created_Time_D_Format__c) )&gt;45, 5, 0) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>