force-app/main/default/objects/Zoho_Ticket__c/fields/Agent_Responded_Time__c.field-meta.xml
<CustomField>
    <fullName>Agent_Responded_Time__c</fullName>
    <label>Agent Responded Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>