force-app/main/default/objects/Zoho_Ticket__c/fields/Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Email__c</fullName>
    <label>Assignee Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>