force-app/main/default/objects/Zoho_Ticket__c/fields/Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Id__c</fullName>
    <label>Assignee Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>