force-app/main/default/objects/Zoho_Ticket__c/fields/Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Name__c</fullName>
    <label>Assignee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>