force-app/main/default/objects/Zoho_Ticket__c/fields/AutoRABIT_Product__c.field-meta.xml
<CustomField>
    <fullName>AutoRABIT_Product__c</fullName>
    <label>AutoRABIT Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>