force-app/main/default/objects/Zoho_Ticket__c/fields/Closed_Time_D_Fomat__c.field-meta.xml
<CustomField>
    <fullName>Closed_Time_D_Fomat__c</fullName>
    <label>Closed Time(D Format)</label>
    <type>Date</type>
</CustomField>