force-app/main/default/objects/Zoho_Ticket__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>