force-app/main/default/objects/Zoho_Ticket__c/fields/Created_Time_D_Format__c.field-meta.xml
<CustomField>
    <fullName>Created_Time_D_Format__c</fullName>
    <label>Created Time(D Format)</label>
    <type>DateTime</type>
</CustomField>