force-app/main/default/objects/Zoho_Ticket__c/fields/Customer_Response_D_Format__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_D_Format__c</fullName>
    <label>Customer Response(D Format)</label>
    <type>Date</type>
</CustomField>