force-app/main/default/objects/Zoho_Ticket__c/fields/Customer_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_Time__c</fullName>
    <label>Customer Response Time</label>
    <length>60</length>
    <type>Text</type>
</CustomField>