force-app/main/default/objects/Zoho_Ticket__c/fields/Days_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Close__c</fullName>
    <formula>Closed_Time_D_Fomat__c  - DATEVALUE(Created_Time_D_Format__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>