force-app/main/default/objects/Zoho_Ticket__c/fields/Due_Date_D_Format__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_D_Format__c</fullName>
    <label>Due Date(D Format)</label>
    <type>Date</type>
</CustomField>