force-app/main/default/objects/Zoho_Ticket__c/fields/EscalationType__c.field-meta.xml
<CustomField>
    <fullName>EscalationType__c</fullName>
    <label>EscalationType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>