force-app/main/default/objects/Zoho_Ticket__c/fields/Last_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Time__c</fullName>
    <label>Last Modified Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>