force-app/main/default/objects/Zoho_Ticket__c/fields/lmt__c.field-meta.xml
<CustomField>
    <fullName>lmt__c</fullName>
    <label>Last Modified Time(D Format)</label>
    <type>Date</type>
</CustomField>