force-app/main/default/objects/Zoho_Ticket__c/fields/Resolution_Time_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_in_Days__c</fullName>
    <formula>Closed_Time_D_Fomat__c -  DATEVALUE(Created_Time_D_Format__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time in Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>