force-app/main/default/objects/Zoho_Ticket__c/fields/Response_Due_Date_D_Format__c.field-meta.xml
<CustomField>
    <fullName>Response_Due_Date_D_Format__c</fullName>
    <label>Response Due Date(D Format)</label>
    <type>Date</type>
</CustomField>