force-app/main/default/objects/Zoho_Ticket__c/fields/Ticket_Closed_Time__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Closed_Time__c</fullName>
    <label>Ticket Closed Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>