force-app/main/default/objects/Zoho_Ticket__c/fields/Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Ticket_ID__c</fullName>
    <externalId>true</externalId>
    <label>Ticket ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>