force-app/main/default/objects/Zoho_Ticket__c/fields/Ticket_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Resolved_Date__c</fullName>
    <label>Ticket Resolved Date</label>
    <type>TextArea</type>
</CustomField>